# matrix_with_ann

./: .gitignore  README.md
matrix/: CMakeLists.txt  CMakeLists.txt~  Matrix.cpp  Matrix.cpp~  Matrix.h  Matrix.h~  main.cpp
matrix/matrix/: Matrix.cpp  Matrix.h
matrix/module/: DropoutLayer.cpp  DropoutLayer.hpp
matrix/module/Ann/: Ann_main.cpp  Ann_main.cpp~  CMakeLists.txt  CMakeLists.txt~  Graph.cpp  Graph.hpp  config.hpp
matrix/module/Ann/include/: FullConnectionLayer.hpp  MeanSquareErrorLayer.hpp  Operator.hpp  ReluLayer.hpp  SigmoidLayer.hpp  SoftmaxWithLossLayer.hpp  TanhLayer.hpp
matrix/module/Ann/src/: FullConnectionLayer.cpp  MeanSquarErrorLayer.cpp  Operator.cpp  ReluLayer.cpp  SigmoidLayer.cpp  SoftmaxWithLossLayer.cpp  TanhLayer.cpp
