CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )



PROJECT( matrix )




AUX_SOURCE_DIRECTORY( . DIR_SRC )


FILE(GLOB_RECURSE HEADERS *.h)
SOURCE_GROUP("Include" FILES ${HEADERS} ) 

ADD_LIBRARY( 01matrix ${DIR_SRC} ${HEADERS} )
ADD_EXECUTABLE( 00matrix_Main ${DIR_SRC} ${HEADERS} )

ADD_SUBDIRECTORY( module/Ann )